--- a/html/cross-origin-opener-policy/resources/javascript-url-same-origin.https.html
+++ b/html/cross-origin-opener-policy/resources/javascript-url-same-origin.https.html
@@ -16,7 +16,7 @@ bc.addEventListener('message', ({data}) => {
     close();
     return;
   }
-  if (data === 'parent') {
+  if (data === 'inspectChild') {
     const iframe = document.createElement('iframe');
     iframe.onload = () => {
       const payload = {
