--- a/html/cross-origin-opener-policy/javascript-url.https.html
+++ b/html/cross-origin-opener-policy/javascript-url.https.html
@@ -187,7 +187,7 @@ async_test((t) => {
   const name = token();
   run(t, 'same-origin-allow-popups', 'same-origin', HTTPS_ORIGIN, name)
     .then((results) => {
-      assert_not_isolated(results, name);
+      assert_isolated(results);
     })
     .then(t.step_func_done(), t.step_func((e) => { throw e; }));
 }, 'navigation: same origin; parentCOOP: same-origin-allow-popups; childCOOP: same-origin');
@@ -223,7 +223,7 @@ async_test((t) => {
   const name = token();
   run(t, 'same-origin', 'same-origin-allow-popups', HTTPS_ORIGIN, name)
     .then((results) => {
-      assert_not_isolated(results, name);
+      assert_isolated(results);
     })
     .then(t.step_func_done(), t.step_func((e) => { throw e; }));
 }, 'navigation: same origin; parentCOOP: same-origin; childCOOP: same-origin-allow-popups');
