--- a/trusted-types/Node-multiple-arguments.tentative.html
+++ b/trusted-types/Node-multiple-arguments.tentative.html
@@ -18,11 +18,11 @@
 
   // This test case mirrors the block-Node-multiple-arguments case except
   // that, because Trusted Types is not enabled, no exceptions should be
-  // thrown anyhwere.
+  // thrown anywhere.
   const targets = ["div", "script"];
   const all_args = [
     [ policy.createScript("'createScript';") ],
-    [ policy.createScript("'cresteScript #1';"), policy.createScript("'#2;'") ],
+    [ policy.createScript("'createScript #1';"), policy.createScript("'#2;'") ],
     [ "'plain text';" ],
     [ "'plain text #1';", "'plain text #2';" ],
     [ document.createTextNode("'node';") ],
