--- a/trusted-types/block-Node-multiple-arguments.tentative.html
+++ b/trusted-types/block-Node-multiple-arguments.tentative.html
@@ -28,7 +28,7 @@
   const targets = ["div", "script"];
   const pass_args = [
     [ policy.createScript("'createScript';") ],
-    [ policy.createScript("'cresteScript #1';"), policy.createScript("'#2;'") ],
+    [ policy.createScript("'createScript #1';"), policy.createScript("'#2;'") ],
   ];
   const fail_args = [
     [ "'plain text';" ],
